Fix Charts title on small screens

--- a/core/app/shell/src/themes/suite8/css/layout/_panel.scss
+++ b/core/app/shell/src/themes/suite8/css/layout/_panel.scss
@@ -51,6 +51,10 @@
   .panel-title {
     font-size: .875rem;
     max-width: 445px;
+
+    .title {
+      line-height: 100%
+    }
   }
 
   .panel-buttons button {
@@ -68,6 +72,12 @@
 @media (max-width: 480px) {
   .panel-card .panel-title {
     max-width: 95px;
+  }
+
+  .panel-title {
+    .title {
+      line-height: 80%
+    }
   }
 }
 
